// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`titresONF teste la récupération des données pour l'ONF 1`] = `
Object {
  "dateCARM": "",
  "dateCompletudePTMG": "2022-03-10",
  "dateReceptionONF": "",
  "domaineId": "m",
  "enAttenteDeONF": true,
  "id": Any<String>,
  "nom": "titre1",
  "references": Array [
    Object {
      "nom": "ONF",
      "referenceTypeId": "onf",
    },
  ],
  "slug": Any<String>,
  "titreStatutId": "val",
  "titulaires": Array [
    Object {
      "adresse": null,
      "archive": false,
      "categorie": null,
      "cedex": null,
      "codePostal": null,
      "commune": null,
      "dateCreation": null,
      "email": null,
      "id": "plop",
      "legalEtranger": null,
      "legalForme": null,
      "legalSiren": null,
      "modification": true,
      "nom": "Mon Entreprise",
      "operateur": null,
      "paysId": null,
      "telephone": null,
      "url": null,
    },
  ],
}
`;

exports[`titresONF teste la récupération des données pour l'ONF 2`] = `
Object {
  "dateCARM": "",
  "dateCompletudePTMG": "",
  "dateReceptionONF": "",
  "domaineId": "m",
  "enAttenteDeONF": false,
  "id": Any<String>,
  "nom": "titre2",
  "references": Array [
    Object {
      "nom": "ONF",
      "referenceTypeId": "onf",
    },
  ],
  "slug": Any<String>,
  "titreStatutId": "val",
  "titulaires": Array [
    Object {
      "adresse": null,
      "archive": false,
      "categorie": null,
      "cedex": null,
      "codePostal": null,
      "commune": null,
      "dateCreation": null,
      "email": null,
      "id": "plop",
      "legalEtranger": null,
      "legalForme": null,
      "legalSiren": null,
      "modification": true,
      "nom": "Mon Entreprise",
      "operateur": null,
      "paysId": null,
      "telephone": null,
      "url": null,
    },
  ],
}
`;

exports[`titresPTMG teste la récupération des données pour le PTMG 1`] = `
Object {
  "domaineId": "m",
  "enAttenteDePTMG": false,
  "id": Any<String>,
  "nom": "titre1",
  "references": Array [
    Object {
      "nom": "ONF",
      "referenceTypeId": "onf",
    },
  ],
  "slug": Any<String>,
  "titreStatutId": "val",
  "titulaires": Array [
    Object {
      "adresse": null,
      "archive": false,
      "categorie": null,
      "cedex": null,
      "codePostal": null,
      "commune": null,
      "dateCreation": null,
      "email": null,
      "id": "plop",
      "legalEtranger": null,
      "legalForme": null,
      "legalSiren": null,
      "modification": true,
      "nom": "Mon Entreprise",
      "operateur": null,
      "paysId": null,
      "telephone": null,
      "url": null,
    },
  ],
}
`;

exports[`titresPTMG teste la récupération des données pour le PTMG 2`] = `
Object {
  "domaineId": "m",
  "enAttenteDePTMG": true,
  "id": Any<String>,
  "nom": "titre2",
  "references": Array [
    Object {
      "nom": "ONF",
      "referenceTypeId": "onf",
    },
  ],
  "slug": Any<String>,
  "titreStatutId": "val",
  "titulaires": Array [
    Object {
      "adresse": null,
      "archive": false,
      "categorie": null,
      "cedex": null,
      "codePostal": null,
      "commune": null,
      "dateCreation": null,
      "email": null,
      "id": "plop",
      "legalEtranger": null,
      "legalForme": null,
      "legalSiren": null,
      "modification": true,
      "nom": "Mon Entreprise",
      "operateur": null,
      "paysId": null,
      "telephone": null,
      "url": null,
    },
  ],
}
`;
